// Copyright (C) 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package api;
option go_package = "github.com/google/gapid/gapis/api";
// cc_package

// ErrCmdAborted is an extra / error used to mark commands which did not finish
// execution. This can be expected (e.g. GL error), or unexpected (failed
// assertion).
message ErrCmdAborted {
  bool is_assert = 1;
  string reason = 2;
}

// CmdCall is a .gfxtrace file marker that indicates the point in which a
// command was called. This is only used for commands that have a void return
// type, as the other commands have their own proto message containing the
// return value.
message CmdCall {}

// Timestamp is a nanosecond counter
message TimeStamp {
  uint64 nanoseconds = 1;
}
